Important changes from 1.5.6 => 1.5.7
============================================================
In LimeSurvey tokenanswerpersistence must be set to true for all surveys
Token/ask now always sets itself to the language of the token user
Added Answer display events for selecting more or less tokens
Increased some small buttons for mobile use
Many small bugs fixed and display improvements made
Implemented many speed optimizations in both database access and code speed
New DEMO application environment
Simplefied writing project level unit test

Important changes from 1.5.5 => 1.5.6
============================================================
Transparent lessCss compiling was added. When you add a .less file GemsTracker will take care of compiling it to css. If you need to force a recompile, add the ?compilecss parameter to your url.
Events can be specified at the GemsTracker level as well as the project level
Surveys can now have their own survey specific display, in a manner similar to event system
Several interface bugs/improvements were solved/written

Important changes from 1.5.4 => 1.5.5
============================================================
New default: user can only login to his own organization and needs to switch after login if desired, to enable old behaviour that could lead to problems with duplicate logins see $allowLoginOnOtherOrganization in Gems_User_UserLoader
Role editing has become more interactive and safer to use
Internally code no longer uses the 'Hidden Organization' but expects both an id1/patientNr plus an id2/organizationId to be specified
Externally the organization id is still left out of the url when not needed
UPGRADE WARNING: Check all your (snippet) extensions to RespondentAction, TrackAction, SurveyAction and project specific versions of ShowTrackTokenSnippet and ShowSingleSurveySnippet: you may need to specify extra parameters as the menu items need to know the organization id
New projects start with a basic css template